Fix h1 bug on mobile
.hero-content h1 text was too large on mobile, causing child containers to get pushed to the left which caused white space all the way down the right of the page. Lessened text size on screens less than 480px.

--- a/styles.css
+++ b/styles.css
@@ -422,6 +422,13 @@ a.about:hover, a.team:hover, a.forums:hover, a.services:hover {
     }
 }
 
+/*Adjust hero content font size for smaller screens*/
+@media only screen and (max-width: 480px) {
+    .hero-content {
+        font-size: 1.3rem;
+    }
+}
+
 /*Slightly adjust team details width for smaller screens*/
 @media only screen and (max-width: 768px) {
     .team-details {
